[gd_scene load_steps=9 format=3 uid="uid://3ug34gn2c8u6"]

[ext_resource type="PackedScene" uid="uid://cln1c2j4b7dkn" path="res://scenes/enemies/enemy.tscn" id="1_ws5de"]
[ext_resource type="Script" uid="uid://c1tou4s87nj5d" path="res://scenes/enemies/clueless/clueless.gd" id="2_cprcy"]
[ext_resource type="Shader" uid="uid://bdnhudp63xi2s" path="res://shaders/dissolve.gdshader" id="2_qaahc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nfihu"]
frequency = 0.032

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lgguw"]
noise = SubResource("FastNoiseLite_nfihu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gj3wk"]
resource_local_to_scene = true
shader = ExtResource("2_qaahc")
shader_parameter/percentage = 1.0
shader_parameter/burn_texture = SubResource("NoiseTexture2D_lgguw")
shader_parameter/layer_1 = Color(0.2, 0.2, 0.2, 1)
shader_parameter/size_1 = 0.05
shader_parameter/layer_2 = Color(1, 0, 0, 1)
shader_parameter/size_2 = 0.05
shader_parameter/layer_3 = Color(1, 0.5, 0, 1)
shader_parameter/size_3 = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws5de"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qaahc"]
size = Vector2(28, 28)

[node name="Clueless" instance=ExtResource("1_ws5de")]
material = SubResource("ShaderMaterial_gj3wk")
script = ExtResource("2_cprcy")
_speed = 70.0

[node name="AnimatedSprite2D" parent="." index="0"]
self_modulate = Color(0.51, 1, 0.60800004, 1)

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_ws5de")

[node name="ShapeCastDown" type="ShapeCast2D" parent="." index="2"]
shape = SubResource("RectangleShape2D_qaahc")
target_position = Vector2(0, 25)
collision_mask = 33793

[node name="ShapeCastLeft" type="ShapeCast2D" parent="." index="3"]
rotation = 1.5707964
shape = SubResource("RectangleShape2D_qaahc")
target_position = Vector2(0, 25)
collision_mask = 33793

[node name="ShapeCastRight" type="ShapeCast2D" parent="." index="4"]
rotation = -1.5707964
shape = SubResource("RectangleShape2D_qaahc")
target_position = Vector2(0, 25)
collision_mask = 33793

[node name="ShapeCastUp" type="ShapeCast2D" parent="." index="5"]
rotation = -3.1415925
shape = SubResource("RectangleShape2D_qaahc")
target_position = Vector2(0, 25)
collision_mask = 33793

[node name="TurnTimer" type="Timer" parent="." index="6"]
